syntax = "proto3";

import "primitives/gossip-listener.proto";

import "./gossip.proto";

service Consensus {
  rpc SendTransaction (SendTransactionInput) returns (SendTransactionOutput);
  rpc GossipMessageReceived (GossipListenerInput) returns (GossipListenerOutput);
}

message SendTransactionInput {
  Transaction transaction = 1;
  TransactionAppendix transactionAppendix = 2;
}

message SendTransactionOutput {
  // empty
}
