syntax = "proto3";

message Transaction {
  uint32 version = 1;
  string sender = 2;
  string contractAddress = 3;
  string payload = 4;
  string signature = 5;
}

message TransactionAppendix {
  uint32 version = 1;
  repeated string prefetchAddresses = 2;
  string subscriptionKey = 3;
}
