syntax = "proto3";

import "primitives/transactions.proto";

service TransactionPool {
  rpc AddNewPendingTransaction (AddNewPendingTransactionInput) returns (AddNewPendingTransactionOutput);
  rpc AddExistingPendingTransaction (AddExistingPendingTransactionInput) returns (AddExistingPendingTransactionOutput);
}

message AddNewPendingTransactionInput {
  Transaction transaction = 1;
}

message AddNewPendingTransactionOutput {
  // empty
}

message AddExistingPendingTransactionInput {
  Transaction transaction = 1;
}

message AddExistingPendingTransactionOutput {
  // empty
}
